// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLayout is rendered correctly 1`] = `
<ContextProvider
  value={
    Object {
      "isOpen": false,
      "toggleOpen": [Function],
    }
  }
>
  <WithStyles(Connect(Header)) />
  <div
    className="makeStyles-section-1"
  >
    <WithStyles(Connect(VerticalNavigation)) />
    <main
      className="makeStyles-component-3 makeStyles-hasMargins-4"
    >
      <Component />
    </main>
  </div>
</ContextProvider>
`;

exports[`withLayout is rendered correctly 2`] = `
<ContextProvider
  value={
    Object {
      "isOpen": false,
      "toggleOpen": [Function],
    }
  }
>
  <WithStyles(Connect(Header)) />
  <div
    className="makeStyles-section-1 makeStyles-hasFooter-2"
  >
    <WithStyles(Connect(VerticalNavigation)) />
    <main
      className="makeStyles-component-3 makeStyles-hasMargins-4"
    >
      <Component />
    </main>
  </div>
  <WithStyles(Footer) />
</ContextProvider>
`;
